# money_pulso

./: .cursorignore  .gitignore  README.MD  compose.yaml  package-lock.json  package.json
app/: .env  .env.example  README.MD  __main__.py  docker-compose.yaml  pyproject.toml  ruff.toml  test_signal_broadcast.py
app/admin/: __init__.py  auth.py  dashboard_summary.py  monitoring_metrics.py  pg_counts.py  privacy_mask.py  roles.py  timezone_ui.js  view.py
app/config/: config.py  debug_json_logger.py  moscow_rotating.py  signals_log.py
app/docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  ROADMAP.md  SYSTEM_PROMPT.MD  TODO.md  troubleshooting.md
app/logs/: signals_log.txt
app/middleware/: __init__.py  production_asset_cache.py
app/schemas/: __init__.py  dtos.py
app/screener/: __init__.py  consumer.py  operator.py  scanner_runtime.py  statistics_store.py  test_mode_eval.py
app/tests/: conftest.py  test_admin_demo_acl.py  test_admin_screener_privacy.py  test_admin_signals_api.py  test_admin_theme_ui.py  test_admin_timezone_ui.py  test_chart_from_csv.py  test_coinmarketcap_rank.py  test_configuration_telegram_env.py  test_consumer_signal_db_dedupe.py  test_consumer_telegram_optional.py  test_dashboard_summary.py  test_monitoring_metrics.py  test_polza_marp_images.py  test_production_asset_cache.py  test_scanner_analytics.py  test_scanner_filter_fire.py  test_scanner_peak_metrics.py  test_statistics_store_purge.py  test_test_mode_eval.py  test_tie_break_score.py
app/utils/: coinmarketcap_rank.py  generate_text.py  signal_counter.py  (+1 more)
(+659 files in other folders)
