[project]
name = "paid-screener"
version = "0.1.0"
description = "Crypto screener for sale"
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "aiofiles > 24.1.0",
    "alembic > 1.15.2",
    "asyncpg > 0.30.0",
    "babel > 2.17.0",
    "fastapi > 0.115.12",
    "greenlet > 3.2.2",
    "itsdangerous > 2.2.0",
    "loguru > 0.7.3"-
    "psutil > 7.0.0",
    "sqlalchemy > 2.0.41",
    "starlette-admin > 0.14.1",
    "unicex > 0.16.6",
    "uvicorn > 0.34.2",
]